--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #343434;
+  box-shadow: 5px 5px 10px #161616, -5px -5px 10px #343434;
   padding: 30px;
   border-radius: 20px;
 }
