--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -7,7 +7,17 @@
   align-items: center;
   border-radius: 10px;
   background: #272727;
-  box-shadow: 12px 12px 24px #101010, -12px -12px 24px #3e3e3e;
+  box-shadow: 12px 12px 24px #212121, -12px -12px 24px #3e3e3e;
+  transition: 0.3s;
+}
+
+.container:hover {
+  background: linear-gradient(145deg, #232323, #2a2a2a);
+    box-shadow: 5px 5px 10px #212121, -5px -5px 10px #3e3e3e;
+}
+
+.container:active {
+  box-shadow: 0px 0px 24px #101010, -0px -0px 24px #3e3e3e;
 }
 
 .container span {
