--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,6 +1,6 @@
 .container {
   background-color: black;
-  width: 50px;
+  /* width: 50px; */
   height: 50px;
   display: flex;
   justify-content: center;
@@ -9,6 +9,7 @@
   background: #272727;
   box-shadow: 12px 12px 24px #101010, -12px -12px 24px #3e3e3e;
   transition: 0.3s;
+  padding: 0px 20px;
 }
 
 .container:hover {
@@ -24,4 +25,5 @@
   display: block;
   font-size: 1.5rem;
   user-select: none;
+  /* width: max-content; */
 }
